# piskvorky2017

./: CMakeLists.txt  README.md  pack-resources.sh
sciter-sdk/bin.gtk/: fix_permissions.sh
sciter-sdk/demos.GLFW/sciter-glfw-basic/: basic.cpp  sciter-glfw-basic.vcxproj  sciter-glfw-basic.vcxproj.filters
sciter-sdk/demos.GLFW/sciter-glfw-basic-bitmap/: basic.cpp  sciter-glfw-basic-bitmap.sln  sciter-glfw-basic-bitmap.vcxproj  sciter-glfw-basic-bitmap.vcxproj.filters  sciter-glfw-basic-facade.htm
sciter-sdk/demos.osx/sciter/: stdafx.h  window.h  window.mm
sciter-sdk/demos.win/AxSciter/: AxSciter.cpp  AxSciter.def  AxSciter.idl  AxSciter.vcxproj  AxSciter.vcxproj.filters  AxSciter_i.c  AxSciter_i.h  AxSciter_p.c  ReadMe.txt  Sciter.cpp  Sciter.h  Sciter.htm  Sciter.rgs  _ISciterEvents_CP.h  dlldata.c  dllmain.cpp  dllmain.h  stdafx.cpp  xdlldata.c
sciter-sdk/demos.win/sciter-directx/: facade.htm  resource.h  sciter-directx.cpp  sciter-directx.rc  sciter-directx.vcxproj  sciter-directx.vcxproj.filters
sciter-sdk/demos.win/sciter-opengl/: ReadMe.txt  opengl-thread.cpp  sciter-opengl.cpp  sciter-opengl.h  sciter-opengl.vcxproj  stdafx.cpp
sciter-sdk/demos/inspector.new/: inspector.cpp  inspector.vcxproj  inspector.vcxproj.filters
sciter-sdk/demos/layered/: ReadMe.txt  default.htm  layered.cpp  layered.h  layered.vcxproj  layered.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
sciter-sdk/demos/minimal/: minimal.cpp  minimal.vcxproj  minimal.vcxproj.filters  readme.txt
sciter-sdk/demos/plain-win/: ReadMe.txt  default.htm  plain-win.cpp  plain-win.h  plain-win.vcxproj  plain-win.vcxproj.filters  resource.h  stdafx.cpp  stdafx.h
sciter-sdk/demos/sciter/: ReadMe.txt  main.cpp  sciter.cpp  sciter.h  sciter.vcxproj  sciter.vcxproj.filters  stdafx.cpp  stdafx.h
sciter-sdk/demos/sciter-mfc/: MainFrm.cpp  MainFrm.h  ReadMe.txt  SciterChildView.cpp  SciterChildView.h  sciter-mfc.cpp  sciter-mfc.h  sciter-mfc.sln  sciter-mfc.vcxproj  sciter-mfc.vcxproj.filters  stdafx.cpp
sciter-sdk/demos/ui-framework/: ReadMe.txt  default.htm  explanation.htm  stdafx.cpp  stdafx.h  ui-framework.cpp  ui-framework.h  ui-framework.vcxproj  ui-framework.vcxproj.filters  worker-thread.cpp
sciter-sdk/demos/ulayered/: readme.htm  ulayered.cpp
sciter-sdk/demos/uminimal/: readme.htm  uminimal.cpp  uminimal.vcxproj  uminimal.vcxproj.filters
sciter-sdk/demos/usciter/: readme.htm  usciter.cpp  usciter.vcxproj  usciter.vcxproj.filters
sciter-sdk/doc/: indexer.tis  main.htm  settings.tis  the.scapp  toc.tis  webdoc.css
sciter-sdk/doc/core/: css-extensions.htm  css-media-queries.htm  csss!-calc-function.htm  csss!-dom-object.htm  csss!-events.htm  csss!.htm  selectors.htm
sciter-sdk/doc/styles/: content.css  (+1 more)
sciter-sdk/include/: aux-slice.h  sciter-osx-main.mm  sciter-win-main.cpp  sciter-x-api.h  sciter-x-behavior.h  sciter-x-def.h  sciter-x-dom.h  sciter-x-graphics.h  sciter-x-graphics.hpp  sciter-x-host-callback.h  sciter-x-types.h  sciter-x-window.hpp  tiscript.h  value.h  value.hpp
sciter-sdk/samples/: ease-functions.tis  fps.htm  log-test.tis  log.htm  note.css
sciter-sdk/sqlite/: class_db.cpp  class_rs.cpp  sqlite3.h  tiscriptsqlite.cpp  tiscriptsqlite.vcxproj
src/: Frame.cpp  Frame.h  Game.cpp  Game.h  Grid.cpp  Grid.h  HumanPlayer.cpp  HumanPlayer.h  MinMaxPlayer.cpp  MinMaxPlayer.h  Player.cpp  Player.h  main.cpp  piskvorky.cpp  resources.h
src/res/: default.htm  ui.tis
test/: TestGame.cpp  TestGame.h
(+748 files in other folders)
